# bazel_cross_compile

03_toolchain/bazel/toolchain/aarch64-rpi3-linux-gnu/: BUILD
03_toolchain/bazel/toolchain/arm-cortex_a8-linux-gnueabihf/: BUILD
04_platforms/: README.md
04_platforms/bazel/toolchain/arm-cortex_a8-linux-gnueabihf/: BUILD
05_platforms_bzlmod/: .bazelrc  .bazelversion  BUILD  MODULE.bazel  README.md  WORKSPACE  deps.bzl
05_platforms_bzlmod/bazel/toolchain/aarch64-rpi3-linux-gnu/: BUILD  aarch64_toolchain_setup.bzl  cc_toolchain_config.bzl
05_platforms_bzlmod/bazel/toolchain/aarch64-rpi3-linux-gnu/wrappers/: wrapper
06_platforms_arm/: .bazelrc  .bazelversion  BUILD  MODULE.bazel  README.md  WORKSPACE  deps.bzl
06_platforms_arm/bazel/toolchain/aarch64-rpi3-linux-gnu/: aarch64_toolchain_setup.bzl
06_platforms_arm/cfg-bazel/toolchains/x86_64-aarch64-none-linux-gnu/: BUILD  cc_toolchain_config.bzl  libX_so.patch  x86_64_aarch64_none_linux_gnu_setup.bzl
06_platforms_arm/examples_bazel/: README.md
06_platforms_arm/examples_bazel/cpp/: README.md
06_platforms_arm/examples_bazel/cpp_stm32/: BUILD  README.md
06_platforms_arm/examples_bazel/grpc_cpp/: BUILD
06_platforms_arm/examples_bazel/py/: BUILD
