# Content migrated from the WORKSPACE file per [Bzlmod Migration Guide](https://bazel.build/external/migration?authuser=1),
# which does not work.

non_module_deps = use_extension("deps.bzl", "non_module_dependencies")
# use_repo(non_module_deps, "aarch64_rpi3_linux_gnu")
# use_repo(non_module_deps, "aarch64_rpi3_linux_gnu_sysroot")
# use_repo(non_module_deps, "arm_cortex_a8_linux_gnueabihf")
# use_repo(non_module_deps, "arm_cortex_a8_linux_gnueabihf_sysroot")
use_repo(non_module_deps, "aarch64-rpi3-linux-gnu")
use_repo(non_module_deps, "aarch64-rpi3-linux-gnu-sysroot")
use_repo(non_module_deps, "arm-cortex-a8-linux-gnueabihf")
use_repo(non_module_deps, "arm-cortex-a8-linux-gnueabihf-sysroot")

register_toolchains(
    "//bazel/toolchain/aarch64-rpi3-linux-gnu:aarch64_linux_toolchain",
    "//bazel/toolchain/arm-cortex_a8-linux-gnueabihf:armv7_linux_toolchain",
}
